--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <div class="block">
-        <a href="/index.html" class="item">
+        <a class="item">
           <img class="gcs-group" src="img/gcs-group.png" alt="gcs-group" />
           <p style="width: 100%; left: 21px" class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
@@ -33,14 +33,14 @@
             alt="rimportal-logo"
           />
         </a>
-        <a href="http://rimmarket.ru" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
           </p>
           <img class="rimmarket-logo" src="img/rimmarket-logo.png" alt="" />
         </a>
-        <a href="http://tsp-s.ru" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
