--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="block">
         <a class="item">
           <img class="gcs-group" src="img/gcs-group.png" alt="gcs-group" />
-          <p style="width: 100%; left: 21px" class="gcs-group-title">
+          <p style="left: 21px" class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
           </p>
           <p class="gcs-group-description">Как работает RIMGROUP</p>
