--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </p>
           <p class="gcs-group-description">Как работает RIMGROUP</p>
         </a>
-        <a href="/rimportal" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -47,7 +47,7 @@
           </p>
           <img class="tsp-s-logo" src="img/tsp-s-logo.png" alt="" />
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
@@ -57,7 +57,7 @@
         </a>
       </div>
       <div class="block">
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
@@ -82,7 +82,7 @@
             <li>Технологии</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -102,7 +102,7 @@
             <li>Варианты предлагаемого продукта</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
@@ -122,7 +122,7 @@
             <li>Целевую Аудиторию</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
@@ -142,7 +142,7 @@
             <li>Целевую Аудиторию</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
@@ -166,7 +166,7 @@
         </a>
       </div>
       <div class="block">
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
@@ -189,7 +189,7 @@
             <li>Масштабируем площадки</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -208,7 +208,7 @@
             <li>Через контакт с заказчиками</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
@@ -227,7 +227,7 @@
             <li>Через контакт с заказчиками</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
@@ -247,7 +247,7 @@
             <li>Через контакт с заказчиками</li>
           </ul>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
@@ -269,7 +269,7 @@
         </a>
       </div>
       <div class="block">
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
@@ -313,7 +313,7 @@
             </div>
           </div>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -348,7 +348,7 @@
             </div>
           </div>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
@@ -383,7 +383,7 @@
             </div>
           </div>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
@@ -421,7 +421,7 @@
             </div>
           </div>
         </a>
-        <a href="" class="item">
+        <a class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
