--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <body>
     <div class="wrapper">
       <div class="block">
-        <a class="item">
+        <div class="item">
           <img class="gcs-group" src="img/gcs-group.png" alt="gcs-group" />
           <p style="left: 21px" class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
           </p>
           <p class="gcs-group-description">Как работает RIMGROUP</p>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -32,32 +32,32 @@
             src="img/rimportal-logo.png"
             alt="rimportal-logo"
           />
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
           </p>
           <img class="rimmarket-logo" src="img/rimmarket-logo.png" alt="" />
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
           </p>
           <img class="tsp-s-logo" src="img/tsp-s-logo.png" alt="" />
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
             <span>товары и услуги</span>
           </p>
           <img class="rimbuilding-logo" src="img/rimbuilding-logo.png" alt="" />
-        </a>
+        </div>
       </div>
       <div class="block">
-        <a class="item">
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
@@ -81,8 +81,8 @@
             <li>Международный сайт - RIMBUILDING товары, услуги,</li>
             <li>Технологии</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -101,8 +101,8 @@
             <li>Варианты взаимодействия с заказчиком</li>
             <li>Варианты предлагаемого продукта</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
@@ -121,8 +121,8 @@
             <li>Варианты предлагаемого продукта</li>
             <li>Целевую Аудиторию</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
@@ -141,8 +141,8 @@
             <li>Варианты предлагаемого продукта</li>
             <li>Целевую Аудиторию</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
@@ -163,10 +163,10 @@
             <li>Варианты предлагаемого продукта</li>
             <li>Целевую Аудиторию</li>
           </ul>
-        </a>
+        </div>
       </div>
       <div class="block">
-        <a class="item">
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
@@ -188,8 +188,8 @@
             <li>Тестируем площадки</li>
             <li>Масштабируем площадки</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -207,8 +207,8 @@
             <li>Через мини версию маркетплейcа MVP</li>
             <li>Через контакт с заказчиками</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
@@ -226,8 +226,8 @@
             <li>Через анализ смежного сегмента</li>
             <li>Через контакт с заказчиками</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
@@ -246,8 +246,8 @@
             <li>Через анализ смежного сегмента</li>
             <li>Через контакт с заказчиками</li>
           </ul>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
@@ -266,10 +266,10 @@
             <li>Через анализ смежного сегмента</li>
             <li>Через контакт с заказчиками</li>
           </ul>
-        </a>
+        </div>
       </div>
       <div class="block">
-        <a class="item">
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="gcs-group-title">
             <span>RIMGROUP -</span> Система инвестиционного холдинга
@@ -312,8 +312,8 @@
               </ul>
             </div>
           </div>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimportal-title">
             RIMPORTAL <span>- Маркетплейс</span> <span>товары</span>
@@ -347,8 +347,8 @@
               </ul>
             </div>
           </div>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimmarket-title">
             <span>RIM MARKET</span> - интернет-магазин <span>товары</span>
@@ -382,8 +382,8 @@
               </ul>
             </div>
           </div>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="tsp-s-title">
             <span>ТСП-С</span> - корпоративный сайт <span>товары и услуги</span>
@@ -420,8 +420,8 @@
               </ul>
             </div>
           </div>
-        </a>
-        <a class="item">
+        </div>
+        <div class="item">
           <img class="rimgroup-logo" src="img/rimgroup.svg" alt="Rim Group" />
           <p class="rimbuilding-title">
             <span>RIM BUILDING</span> - корпоративный сайт
@@ -459,7 +459,7 @@
               </ul>
             </div>
           </div>
-        </a>
+        </div>
       </div>
     </div>
   </body>
